# Secure-Audio-Encryption-and-Transmission

./: .gitignore  README.md  app.py  generate_docs.py  generate_tests.py  pyproject.toml  requirements.txt  run_demo.ps1  run_web.ps1
docs/: architecture.md  benchmark_report.md  inheritance_upgrade.md  protocol_design.md  test_report.md  threat_model.md
output/benchmark/: benchmark_results.csv  benchmark_results.json
output/channel/3d39f791-bf99-4f6a-b524-355ecf1b6aa0/: at1.enc  at2.enc  at3.enc  at4.enc  at5.enc  manifest.json
output/channel/3da55bf2-2bd0-4876-9026-1753eb479911/: at1.enc  at2.enc  at3.enc  at4.enc  at5.enc  manifest.json  received_order.json  state.json
output/channel/75f8b9f2-9f5c-4fec-9442-ed353c4d89d4/: at1.enc  at2.enc  at3.enc  at4.enc  at5.enc  (+2 more)
sample_data/: README.md
src/: benchmark.py  cli.py  config.py  exceptions.py  receiver.py  sender.py
src/audio/: assembler.py  format_validator.py  input_loader.py  metadata.py
src/crypto/: aead.py  hashing.py  key_derivation.py  key_manager.py  manifest_auth.py  steganography.py
src/protocol/: manifest.py  models.py  replay_guard.py  validator.py
src/transport/: local_transport.py
src/utils/: canonical_json.py  file_utils.py  logger.py
static/css/: style.css
static/js/: app.js
templates/: base.html  benchmark.html  hacker_result.html  index.html  logs.html  result.html  transfer.html
tests/: conftest.py  test_missing_at3.py  test_replay.py  test_required_cases.py  test_tampered_at2.py  test_valid_mp3.py  test_web.py
web/: __init__.py  routes.py  services.py  web_utils.py
(+7 files in other folders)
