[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-audio-segment-transfer"
version = "1.0.0"
description = "Secure Audio Segment Transfer for FIT4012"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "mutagen>=1.47.0",
    "pydantic>=2.4.0",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0"
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
